[package]
name = "primeshor" 
version = "0.1.0" 
edition = "2021" 
description = "A Rust project to explore prime numbers and factorization" 
license = "MIT"
authors = ["Bader alotaibi baderalotaibi3@gmail.com"] 
repository = "https://github.com/BDR-Pro/PrimeShorRustPackage" 

[lib]
path = "src/lib.rs"

[[bin]]
name = "primeshor" 
path = "src/main.rs"


