[package]
name = "primeshor" 
version = "0.2.0" 
edition = "2021" 
description = "A Rust project to explore prime numbers and factorization" 
license = "MIT"
authors = ["Bader alotaibi baderalotaibi3@gmail.com"] 
repository = "https://github.com/BDR-Pro/PrimeShorRustPackage" 
readme = "README.md"
documentation = "https://docs.rs/primeshor"

keywords = ["prime", "mathematics", "number-theory", "algorithms"]
categories = ["algorithms", "mathematics", "science", "cryptography"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "primeshor" 
path = "src/main.rs"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
